--- a/E-commerce_Mobile End/pages/home/home.scss
+++ b/E-commerce_Mobile End/pages/home/home.scss
@@ -487,6 +487,32 @@
 				}
 			}
 		}
+		
+		// 加载状态
+		.loading-state {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 200rpx;
+			
+			text {
+				color: #999;
+				font-size: 28rpx;
+			}
+		}
+		
+		// 空状态
+		.empty-state {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 200rpx;
+			
+			text {
+				color: #ccc;
+				font-size: 28rpx;
+			}
+		}
 	}
 	
 }	
